qcpg/src/main/java/com/qcpg/qcpg/antlr4/qasm3Parser.java
package com.qcpg.qcpg.antlr4;

// Generated from qasm3Parser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue" })
public class qasm3Parser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int OPENQASM = 1, INCLUDE = 2, DEFCALGRAMMAR = 3, DEF = 4, CAL = 5, DEFCAL = 6, GATE = 7,
			EXTERN = 8, BOX = 9, LET = 10, BREAK = 11, CONTINUE = 12, IF = 13, ELSE = 14, END = 15,
			RETURN = 16, FOR = 17, WHILE = 18, IN = 19, SWITCH = 20, CASE = 21, DEFAULT = 22, PRAGMA = 23,
			AnnotationKeyword = 24, INPUT = 25, OUTPUT = 26, CONST = 27, READONLY = 28, MUTABLE = 29,
			QREG = 30, QUBIT = 31, CREG = 32, BOOL = 33, BIT = 34, INT = 35, UINT = 36, FLOAT = 37,
			ANGLE = 38, COMPLEX = 39, ARRAY = 40, VOID = 41, DURATION = 42, STRETCH = 43, GPHASE = 44,
			INV = 45, POW = 46, CTRL = 47, NEGCTRL = 48, DIM = 49, DURATIONOF = 50, DELAY = 51,
			RESET = 52, MEASURE = 53, BARRIER = 54, BooleanLiteral = 55, LBRACKET = 56, RBRACKET = 57,
			LBRACE = 58, RBRACE = 59, LPAREN = 60, RPAREN = 61, COLON = 62, SEMICOLON = 63, DOT = 64,
			COMMA = 65, EQUALS = 66, ARROW = 67, PLUS = 68, DOUBLE_PLUS = 69, MINUS = 70, ASTERISK = 71,
			DOUBLE_ASTERISK = 72, SLASH = 73, PERCENT = 74, PIPE = 75, DOUBLE_PIPE = 76, AMPERSAND = 77,
			DOUBLE_AMPERSAND = 78, CARET = 79, AT = 80, TILDE = 81, EXCLAMATION_POINT = 82,
			EqualityOperator = 83, CompoundAssignmentOperator = 84, ComparisonOperator = 85,
			BitshiftOperator = 86, IMAG = 87, ImaginaryLiteral = 88, BinaryIntegerLiteral = 89,
			OctalIntegerLiteral = 90, DecimalIntegerLiteral = 91, HexIntegerLiteral = 92,
			Identifier = 93, HardwareQubit = 94, FloatLiteral = 95, TimingLiteral = 96, BitstringLiteral = 97,
			Whitespace = 98, Newline = 99, LineComment = 100, BlockComment = 101, VERSION_IDENTIFER_WHITESPACE = 102,
			VersionSpecifier = 103, ARBITRARY_STRING_WHITESPACE = 104, StringLiteral = 105,
			EAT_INITIAL_SPACE = 106, EAT_LINE_END = 107, RemainingLineContent = 108, CAL_PRELUDE_WHITESPACE = 109,
			CAL_PRELUDE_COMMENT = 110, DEFCAL_PRELUDE_WHITESPACE = 111, DEFCAL_PRELUDE_COMMENT = 112,
			CalibrationBlock = 113;
	public static final int RULE_program = 0, RULE_version = 1, RULE_statement = 2, RULE_annotation = 3,
			RULE_scope = 4, RULE_pragma = 5, RULE_statementOrScope = 6, RULE_calibrationGrammarStatement = 7,
			RULE_includeStatement = 8, RULE_breakStatement = 9, RULE_continueStatement = 10,
			RULE_endStatement = 11, RULE_forStatement = 12, RULE_ifStatement = 13,
			RULE_returnStatement = 14, RULE_whileStatement = 15, RULE_switchStatement = 16,
			RULE_switchCaseItem = 17, RULE_barrierStatement = 18, RULE_boxStatement = 19,
			RULE_delayStatement = 20, RULE_gateCallStatement = 21, RULE_measureArrowAssignmentStatement = 22,
			RULE_resetStatement = 23, RULE_aliasDeclarationStatement = 24, RULE_classicalDeclarationStatement = 25,
			RULE_constDeclarationStatement = 26, RULE_ioDeclarationStatement = 27,
			RULE_oldStyleDeclarationStatement = 28, RULE_quantumDeclarationStatement = 29,
			RULE_defStatement = 30, RULE_externStatement = 31, RULE_gateStatement = 32,
			RULE_assignmentStatement = 33, RULE_expressionStatement = 34, RULE_calStatement = 35,
			RULE_defcalStatement = 36, RULE_expression = 37, RULE_aliasExpression = 38,
			RULE_declarationExpression = 39, RULE_measureExpression = 40, RULE_rangeExpression = 41,
			RULE_setExpression = 42, RULE_arrayLiteral = 43, RULE_indexOperator = 44,
			RULE_indexedIdentifier = 45, RULE_returnSignature = 46, RULE_gateModifier = 47,
			RULE_scalarType = 48, RULE_qubitType = 49, RULE_arrayType = 50, RULE_arrayReferenceType = 51,
			RULE_designator = 52, RULE_defcalTarget = 53, RULE_defcalArgumentDefinition = 54,
			RULE_defcalOperand = 55, RULE_gateOperand = 56, RULE_externArgument = 57,
			RULE_argumentDefinition = 58, RULE_argumentDefinitionList = 59, RULE_defcalArgumentDefinitionList = 60,
			RULE_defcalOperandList = 61, RULE_expressionList = 62, RULE_identifierList = 63,
			RULE_gateOperandList = 64, RULE_externArgumentList = 65;

	private static String[] makeRuleNames() {
		return new String[] {
				"program", "version", "statement", "annotation", "scope", "pragma", "statementOrScope",
				"calibrationGrammarStatement", "includeStatement", "breakStatement",
				"continueStatement", "endStatement", "forStatement", "ifStatement", "returnStatement",
				"whileStatement", "switchStatement", "switchCaseItem", "barrierStatement",
				"boxStatement", "delayStatement", "gateCallStatement", "measureArrowAssignmentStatement",
				"resetStatement", "aliasDeclarationStatement", "classicalDeclarationStatement",
				"constDeclarationStatement", "ioDeclarationStatement", "oldStyleDeclarationStatement",
				"quantumDeclarationStatement", "defStatement", "externStatement", "gateStatement",
				"assignmentStatement", "expressionStatement", "calStatement", "defcalStatement",
				"expression", "aliasExpression", "declarationExpression", "measureExpression",
				"rangeExpression", "setExpression", "arrayLiteral", "indexOperator",
				"indexedIdentifier", "returnSignature", "gateModifier", "scalarType",
				"qubitType", "arrayType", "arrayReferenceType", "designator", "defcalTarget",
				"defcalArgumentDefinition", "defcalOperand", "gateOperand", "externArgument",
				"argumentDefinition", "argumentDefinitionList", "defcalArgumentDefinitionList",
				"defcalOperandList", "expressionList", "identifierList", "gateOperandList",
				"externArgumentList"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'OPENQASM'", "'include'", "'defcalgrammar'", "'def'", "'cal'",
				"'defcal'", "'gate'", "'extern'", "'box'", "'let'", "'break'", "'continue'",
				"'if'", "'else'", "'end'", "'return'", "'for'", "'while'", "'in'", "'switch'",
				"'case'", "'default'", null, null, "'input'", "'output'", "'const'",
				"'readonly'", "'mutable'", "'qreg'", "'qubit'", "'creg'", "'bool'", "'bit'",
				"'int'", "'uint'", "'float'", "'angle'", "'complex'", "'array'", "'void'",
				"'duration'", "'stretch'", "'gphase'", "'inv'", "'pow'", "'ctrl'", "'negctrl'",
				"'#dim'", "'durationof'", "'delay'", "'reset'", "'measure'", "'barrier'",
				null, "'['", "']'", "'{'", "'}'", "'('", "')'", "':'", "';'", "'.'",
				"','", "'='", "'->'", "'+'", "'++'", "'-'", "'*'", "'**'", "'/'", "'%'",
				"'|'", "'||'", "'&'", "'&&'", "'^'", "'@'", "'~'", "'!'", null, null,
				null, null, "'im'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, "OPENQASM", "INCLUDE", "DEFCALGRAMMAR", "DEF", "CAL", "DEFCAL",
				"GATE", "EXTERN", "BOX", "LET", "BREAK", "CONTINUE", "IF", "ELSE", "END",
				"RETURN", "FOR", "WHILE", "IN", "SWITCH", "CASE", "DEFAULT", "PRAGMA",
				"AnnotationKeyword", "INPUT", "OUTPUT", "CONST", "READONLY", "MUTABLE",
				"QREG", "QUBIT", "CREG", "BOOL", "BIT", "INT", "UINT", "FLOAT", "ANGLE",
				"COMPLEX", "ARRAY", "VOID", "DURATION", "STRETCH", "GPHASE", "INV", "POW",
				"CTRL", "NEGCTRL", "DIM", "DURATIONOF", "DELAY", "RESET", "MEASURE",
				"BARRIER", "BooleanLiteral", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE",
				"LPAREN", "RPAREN", "COLON", "SEMICOLON", "DOT", "COMMA", "EQUALS", "ARROW",
				"PLUS", "DOUBLE_PLUS", "MINUS", "ASTERISK", "DOUBLE_ASTERISK", "SLASH",
				"PERCENT", "PIPE", "DOUBLE_PIPE", "AMPERSAND", "DOUBLE_AMPERSAND", "CARET",
				"AT", "TILDE", "EXCLAMATION_POINT", "EqualityOperator", "CompoundAssignmentOperator",
				"ComparisonOperator", "BitshiftOperator", "IMAG", "ImaginaryLiteral",
				"BinaryIntegerLiteral", "OctalIntegerLiteral", "DecimalIntegerLiteral",
				"HexIntegerLiteral", "Identifier", "HardwareQubit", "FloatLiteral", "TimingLiteral",
				"BitstringLiteral", "Whitespace", "Newline", "LineComment", "BlockComment",
				"VERSION_IDENTIFER_WHITESPACE", "VersionSpecifier", "ARBITRARY_STRING_WHITESPACE",
				"StringLiteral", "EAT_INITIAL_SPACE", "EAT_LINE_END", "RemainingLineContent",
				"CAL_PRELUDE_WHITESPACE", "CAL_PRELUDE_COMMENT", "DEFCAL_PRELUDE_WHITESPACE",
				"DEFCAL_PRELUDE_COMMENT", "CalibrationBlock"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "qasm3Parser.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public qasm3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(qasm3Parser.EOF, 0);
		}

		public VersionContext version() {
			return getRuleContext(VersionContext.class, 0);
		}

		public List<StatementOrScopeContext> statementOrScope() {
			return getRuleContexts(StatementOrScopeContext.class);
		}

		public StatementOrScopeContext statementOrScope(int i) {
			return getRuleContext(StatementOrScopeContext.class, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof qasm3ParserListener)
				((qasm3ParserListener) listener).enterProgram(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof qasm3ParserListener)
				((qasm3ParserListener) listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == OPENQASM) {
					{
						setState(132);
						version();
					}
				}

				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1512644325007671292L) != 0)
						|| ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & 268179457L) != 0)) {
					{
						{
							setState(135);
							statementOrScope();
						}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(141);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode OPENQASM() {
			return getToken(qasm3Parser.OPENQASM, 0);
		}

		public TerminalNode VersionSpecifier() {
			return getToken(qasm3Parser.VersionSpecifier, 0);
		}

		public TerminalNode SEMICOLON() {
			return getToken(qasm3Parser.SEMICOLON, 0);
		}

		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_version;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof qasm3ParserListener)
				((qasm3ParserListener) listener).enterVersion(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof qasm3ParserListener)
				((qasm3ParserListener) listener).exitVersion(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(143);
				match(OPENQASM);
				setState(144);
				match(VersionSpecifier);
				setState(145);
				match(SEMICOLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public PragmaContext pragma() {
			return getRuleContext(PragmaContext.class, 0);
		}

		public AliasDeclarationStatementContext aliasDeclarationStatement() {
			return getRuleContext(AliasDeclarationStatementContext.class, 0);
		}

		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class, 0);
		}

		public BarrierStatementContext barrierStatement() {
			return getRuleContext(BarrierStatementContext.class, 0);
		}

		public BoxStatementContext boxStatement() {
			return getRuleContext(BoxStatementContext.class, 0);
		}

		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class, 0);
		}

		public CalStatementContext calStatement() {
			return getRuleContext(CalStatementContext.class, 0);
		}

		public CalibrationGrammarStatementContext calibrationGrammarStatement() {
			return getRuleContext(CalibrationGrammarStatementContext.class, 0);
		}

		public ClassicalDeclarationStatementContext classicalDeclarationStatement() {
			return getRuleContext(ClassicalDeclarationStatementContext.class, 0);
		}

		public ConstDeclarationStatementContext constDeclarationStatement() {
			return getRuleContext(ConstDeclarationStatementContext.class, 0);
		}

		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class, 0);
		}

		public DefStatementContext defStatement() {
			return getRuleContext(DefStatementContext.class, 0);
		}

		public DefcalStatementContext defcalStatement() {
			return getRuleContext(DefcalStatementContext.class, 0);
		}

		public DelayStatementContext delayStatement() {
			return getRuleContext(DelayStatementContext.class, 0);
		}

		public EndStatementContext endStatement() {
			return getRuleContext(EndStatementContext.class, 0);
		}

		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class, 0);
		}

		public ExternStatementContext externStatement() {
			return getRuleContext(ExternStatementContext.class, 0);
		}

		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class, 0);
		}

		public GateCallStatementContext gateCallStatement() {
			return getRuleContext(GateCallStatementContext.class, 0);
		}

		public GateStatementContext gateStatement() {
			return getRuleContext(GateStatementContext.class, 0);
		}

		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class, 0);
		}

		public IncludeStatementContext includeStatement() {
			return getRuleContext(IncludeStatementContext.class, 0);
		}

		public IoDeclarationStatementContext ioDeclarationStatement() {
			return getRuleContext(IoDeclarationStatementContext.class, 0);
		}

		public MeasureArrowAssignmentStatementContext measureArrowAssignmentStatement() {
			return getRuleContext(MeasureArrowAssignmentStatementContext.class, 0);
		}

		public OldStyleDeclarationStatementContext oldStyleDeclarationStatement() {
			return getRuleContext(OldStyleDeclarationStatementContext.class, 0);
		}

		public QuantumDeclarationStatementContext quantumDeclarationStatement() {
			return getRuleContext(QuantumDeclarationStatementContext.class, 0);
		}

		public ResetStatementContext resetStatement() {
			return getRuleContext(ResetStatementContext.class, 0);
		}

		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class, 0);
		}

		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class, 0);
		}

		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class, 0);
		}

		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}

		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class, i);
		}

		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_statement;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof qasm3ParserListener)
				((qasm3ParserListener) listener).enterStatement(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof qasm3ParserListener)
				((qasm3ParserListener) listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(185);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case PRAGMA:
					enterOuterAlt(_localctx, 1); {
					setState(147);
					pragma();
				}
					break;
				case INCLUDE:
				case DEFCALGRAMMAR:
				case DEF:
				case CAL:
				case DEFCAL:
				case GATE:
				case EXTERN:
				case BOX:
				case LET:
				case BREAK:
				case CONTINUE:
				case IF:
				case END:
				case RETURN:
				case FOR:
				case WHILE:
				case SWITCH:
				case AnnotationKeyword:
				case INPUT:
				case OUTPUT:
				case CONST:
				case QREG:
				case QUBIT:
				case CREG:
				case BOOL:
				case BIT:
				case INT:
				case UINT:
				case FLOAT:
				case ANGLE:
				case COMPLEX:
				case ARRAY:
				case DURATION:
				case STRETCH:
				case GPHASE:
				case INV:
				case POW:
				case CTRL:
				case NEGCTRL:
				case DURATIONOF:
				case DELAY:
				case RESET:
				case MEASURE:
				case BARRIER:
				case BooleanLiteral:
				case LPAREN:
				case MINUS:
				case TILDE:
				case EXCLAMATION_POINT:
				case ImaginaryLiteral:
				case BinaryIntegerLiteral:
				case OctalIntegerLiteral:
				case DecimalIntegerLiteral:
				case HexIntegerLiteral:
				case Identifier:
				case HardwareQubit:
				case FloatLiteral:
				case TimingLiteral:
				case BitstringLiteral:
					enterOuterAlt(_localctx, 2); {
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == AnnotationKeyword) {
						{
							{
								setState(148);
								annotation();
							}
						}
						setState(153);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(183);
					_errHandler.sync(this);
					switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
						case 1: {
							setState(154);
							aliasDeclarationStatement();
						}
							break;
						case 2: {
							setState(155);
							assignmentStatement();
						}
							break;
						case 3: {
							setState(156);
							barrierStatement();
						}
							break;
						case 4: {
							setState(157);
							boxStatement();
						}
							break;
						case 5: {
							setState(158);
							breakStatement();
						}
							break;
						case 6: {
							setState(159);
							calStatement();
						}
							break;
						case 7: {
							setState(160);
							calibrationGrammarStatement();
						}
							break;
						case 8: {
							setState(161);
							classicalDeclarationStatement();
						}
							break;
						case 9: {
							setState(162);
							constDeclarationStatement();
						}
							break;
						case 10: {
							setState(163);
							continueStatement();
						}
							break;
						case 11: {
							setState(164);
							defStatement();
						}
							break;
						case 12: {
							setState(165);
							defcalStatement();
						}
							break;
						case 13: {
							setState(166);
							delayStatement();
						}
							break;
						case 14: {
							setState(167);
							endStatement();
						}
							break;
						case 15: {
							setState(168);
							expressionStatement();
						}
							break;
						case 16: {
							setState(169);
							externStatement();
						}
							break;
						case 17: {
							setState(170);
							forStatement();
						}
							break;
						case 18: {
							setState(171);
							gateCallStatement();
						}
							break;
						case 19: {
							setState(172);
							gateStatement();
						}
							break;
						case 20: {
							setState(173);
							ifStatement();
						}
							break;
						case 21: {
							setState(174);
							includeStatement();
						}
							break;
						case 22: {
							setState(175);
							ioDeclarationStatement();
						}
							break;
						case 23: {
							setState(176);
							measureArrowAssignmentStatement();
						}
							break;
						case 24: {
							setState(177);
							oldStyleDeclarationStatement();
						}
							break;
						case 25: {
							setState(178);
							quantumDeclarationStatement();
						}
							break;
						case 26: {
							setState(179);
							resetStatement();
						}
							break;
						case 27: {
							setState(180);
							returnStatement();
						}
							break;
						case 28: {
							setState(181);
							switchStatement();
						}
							break;
						case 29: {
							setState(182);
							whileStatement();
						}
							break;
					}
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode AnnotationKeyword() {
			return getToken(qasm3Parser.AnnotationKeyword, 0);
		}

		public TerminalNode RemainingLineContent() {
			return getToken(qasm3Parser.RemainingLineContent, 0);
		}

		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_annotation;
		}
